Fix the last card overlapping effect

--- a/css/shop.css
+++ b/css/shop.css
@@ -82,6 +82,7 @@ main {
     width: 100%;
     height: 100%;
     padding: var(--space-2);
+    padding-bottom: 0;
     align-items: center;
     justify-content: flex-end;
 }
@@ -140,18 +141,25 @@ main {
 
 .espresso-card {
     background: linear-gradient(180deg, #BE5036 0%, #593026 100%);
+    z-index: 1;
 }
 
 .blend-card {
     background: linear-gradient(180deg, #3D8A64 0%, #244233 100%);
+    z-index: 2;
 }
 
 .filter-card {
     background: linear-gradient(180deg, #C380AC 0%, #5D3F53 100%);
+    z-index: 3;
 }
 
 .accessories-card {
     background: linear-gradient(180deg, #AEB4CC 0%, #666A78 100%);
+    z-index: 4;
+    padding-bottom: var(--space-2);
+    margin-bottom: 0;
+    border-radius: 5px 5px 0 0;
 }
 
 .back-btn {
